2004-06-23  John Dallaway  <jld@ecoscentric.com>

	* interp.cxx (locate_subdirs): Avoid use of a trailing period in
	the file path. This causes problems for Cygwin 1.5.10.
	[ Bugzilla 1000095 ]

2003-08-19  Bart Veer  <bartv@ecoscentric.com>

	* config.cxx (savefile_package_command):
	If no version is specified, silently default to the most recent.
	That can avoid problems with templates specifying particular versions
	and then providing an update epk.

2003-05-01  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/package.sgml: Use PNGs instead of GIFs.
	* doc/jadetex.cfg: Add this to configure PDF output nicely with index
	and coloured links.

2003-03-26  Bart Veer  <bartv@ecoscentric.com>

	* cdl.hxx, config.cxx.cxx, package.cxx:
	Update derived classes now that the repository is per-loadable
	rather than per-toplevel. Also turn ECOS_REPOSITORY into a
	path rather than a single directory, updating all affected
	database and config code.

	* base.cxx, build.cxx, cdlcore.hxx: make the repository a
	characteristic of each loadable rather than of the toplevel

2003-02-12  Bart Veer  <bartv@ecoscentric.com>

	* Makefile.in, configure, testsuite/Makefile.in:
	Regenerate after acinclude.m4 update

2003-02-11  Bart Veer  <bartv@ecoscentric.com>

	* build.cxx (compare_and_copy):
	Work around problem with cygwin tclsh84 - "file rename" may
	spuriously report failure.

2003-02-03  John Dallaway  <jld@ecoscentric.com>

	* cdl.dsp: Call tclsh rather than cygtclsh80 in custom build rule.

2002-12-22  Nick Garnett  <nickg@ecoscentric.com>

	* doc/.cvsignore: Added this file to ignore generated HTML files.

2002-09-21  Bart Veer  <bartv@ecoscentric.com>

	* cdlcore.hxx, cdl.hxx, build.cxx, component.cxx, config.cxx,
	  database.cxx, dialog.cxx, interface.cxx, interp.cxx,
	  option.cxx, package.cxx, parse.cxx, property.cxx,
	  value.cxx, wizards.cxx
	Avoid const compatibility problems with Tcl 8.4

2002-08-03  Bart Veer  <bartv@ecoscentric.com>
