@@ -3694,7 +3694,7 @@ follow_expr_references(CdlProperty property, CdlExpression expr)
 // ----------------------------------------------------------------------------
 
 void
-CdlValuableBody::save(CdlInterpreter interp, Tcl_Channel chan, int indentation, bool modifiable, bool minimal)
+CdlValuableBody::save_valuable(CdlInterpreter interp, Tcl_Channel chan, int indentation, bool modifiable, bool minimal)
 {
     CYG_REPORT_FUNCNAME("CdlValuable::save");
     CYG_REPORT_FUNCARG5XV(this, interp, chan, indentation, minimal);
